Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/DeweyPosture__c.object-meta.xml
<CustomObject>
    <label>Dewey Posture</label>
    <pluralLabel>Dewey Postures</pluralLabel>
    <nameField>
        <displayFormat>PST-{000000}</displayFormat>
        <label>Posture</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One record per capability assessed per analysis run. Stores the Adopt/Adapt posture breakdown (9 capabilities: Data Model, Security, Automation, etc.).</description>
</CustomObject>