Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/CapabilityId__c.field-meta.xml
<CustomField>
    <fullName>CapabilityId__c</fullName>
    <description>Technical identifier of the capability (e.g. data_model, security, automation). Matches CapabilityAssessment.capability_id in Python.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Capability ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>