Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/CapabilityLabel__c.field-meta.xml
<CustomField>
    <fullName>CapabilityLabel__c</fullName>
    <label>Capability</label>
    <type>Text</type>
    <length>100</length>
    <description>Display label of the assessed capability (e.g. "Data Model", "Security", "Automation").</description>
</CustomField>