Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>Name of the decisive component that drove the Adopt/Adapt level (e.g. DeweyAnalysisTrigger, Dewey_User, Account.MyRule). Empty for Adopt (OOTB) level.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>