Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <description>Salesforce metadata type of the decisive component (e.g. ApexTrigger, Flow, FlexiPage, Dashboard). Empty for Adopt (OOTB) level.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>