Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/DeweyAnalysis__c.field-meta.xml
<CustomField>
    <fullName>DeweyAnalysis__c</fullName>
    <label>Analysis</label>
    <type>Lookup</type>
    <referenceTo>DeweyAnalysis__c</referenceTo>
    <relationshipName>PostureItems</relationshipName>
    <relationshipLabel>Posture Assessments</relationshipLabel>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Parent analysis run that produced this capability posture record.</description>
</CustomField>