Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <description>Audit trail explaining why this level was assigned (e.g. &quot;15 custom objects&quot;, &quot;3 Apex triggers detected&quot;).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>