Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Adoption/adaptation maturity level for this capability. Values match CapabilityLevel enum in Python.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adopt (OOTB)</fullName>
            </value>
            <value>
                <fullName>Adopt declaratif</fullName>
            </value>
            <value>
                <fullName>Adapt (declaratif)</fullName>
            </value>
            <value>
                <fullName>Adapt (code)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>