Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/LevelChange__c.field-meta.xml
<CustomField>
    <fullName>LevelChange__c</fullName>
    <description>Direction of posture change vs the previous analysis run. Amélioré = moved toward Adopt(OOTB), Dégradé = moved toward Adapt(code), Stable = no change, Premier run = no previous data. Used for trend tracking in CRM Analytics.</description>
    <label>Level Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amélioré</fullName>
            </value>
            <value>
                <fullName>Dégradé</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Premier run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>