Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyPosture__c/fields/PreviousLevel__c.field-meta.xml
<CustomField>
    <fullName>PreviousLevel__c</fullName>
    <label>Previous Level</label>
    <type>Picklist</type>
    <description>Adopt/adaptation level recorded in the previous analysis run for this capability. Empty on first run. Used with LevelChange__c for trend tracking in CRM Analytics.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adopt (OOTB)</fullName>
            </value>
            <value>
                <fullName>Adopt declaratif</fullName>
            </value>
            <value>
                <fullName>Adapt (declaratif)</fullName>
            </value>
            <value>
                <fullName>Adapt (code)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>